css/index.css
/*******************************
            Global
*******************************/

html {
  font-size: 14px;
}

#aprender p {
  text-align: justify;
}

#eventos iframe {
  box-shadow: 0px 0px 0px 5px rgba(255, 255, 255, 0.5);
  border-radius: 0.2857rem;
}

#mentor p {
  text-align: justify;
}

#mentor .button {
  margin-top: 1em;
}

/*******************************
            Global
*******************************/

#home .menu .right.menu > .mobile.item {
  display: none;
}

/*--------------
    Masthead
---------------*/

#home .masthead {
  min-height: 450px;
  margin: 4rem 0 0 0;
}
#home .masthead p {
  text-align: justify;
}

#home .masthead .information {
  margin-top: 100px;
}
#home .masthead .information p {
  max-width: 600px;
}
#home .masthead .image {
  margin-top: 50px;
}

/*--------------
    header
---------------*/
#header {
  z-index: 1;
  left: 0;
  width: 100%;
  position: fixed;
  background-color: #ffffff;
  height: 90px;
  top: 0;
  border-bottom: 3px solid;
  border-color: #52bab5;
}
nav {
  position: relative;
  width: 90%;
  height: 100%;
  margin: 0 auto;
}
#header img {
  display: inline-block;
  left: 0;
  width: 30%;
  max-width: 210px;
  vertical-align: middle;
}
.list{
  display: inline-block;
  left: 0;
}
nav > * {
  position: absolute;
  top: 50%;
  -webkit-transform: translateY(-50%);
  margin-left:-5px;
  margin-right:-5px;
}
.list ul{
}
.list ul li{
  display: inline;
  margin-left: 0px;
  padding-left: 20px;
  white-space: nowrap;
}
.list ul li:first-of-type{
  padding: 0;
}
.list ul li a{
  text-decoration: none;
  color: #000000;
  font-size: 16px;
}
.list ul li:first-of-type a{
  border: none;
}
.list a:hover{
  color: #666666;
  font-size: 16px;
}
.active {
  border-bottom: solid 3px;
    border-color: #52bab5;
    padding-bottom: 3px,
  }

/*--------------
    Ribbons
---------------*/

#home .segment h1 {
  font-size: 3em;
  margin-bottom: 1em;
}

#home .vertical.segment {
  padding: 6rem 0rem;
}

#home .feature.segment {
  margin: 0em;
  padding: 6rem 0rem;
}
#home .feature.segment p {
  min-height: 50px;
}

#home .selection.list {
  margin: 0em -0.5em;
}

#home .logo.row {
  height: 10rem;
}

/*--------------
    Social
---------------*/

.ui.icon.header:hover .icon {
  color: #52bab5;
}

/*--------------
    Footer
---------------*/

#home .footer.segment {
  background-color: #000000;
  padding: 3rem 0rem;
}


/*******************************
          Responsive
*******************************/

/* Mobile Only */
@media only screen and (max-width : 767px) {

  nav {
    width: 100%;
  }

  #header img {
    width: 110px;
  }

  .list ul li{
    padding-left: 10px;
  }

  .list ul li:first-of-type{
    padding-left: 10px;
  }

  #home .menu .right.menu > .item {
    display: none;
  }

  #home .menu .right.menu > .mobile.item {
    display: block;
  }
  #home .menu .right.menu > .mobile.item .menu {
    left: auto;
    right: 0em;
  }

  #home h1 {
    font-size: 1.5em;
  }

  #home .masthead.segment .ten.wide.column {
    width: 100% !important;
  }

  #home .masthead.segment .six.wide.column {
    display: none;
  }

  #home .masthead.segment .button {
    font-size: 1rem;
  }

  #home .overview .divided.grid .header .icon {
    font-size: 1.5em;
  }

  #home .overview .divided.grid .header + p {
    min-height: 0px;
  }

  #home .selection.list .right.floated {
    display: none;
  }
}

